--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "mongoose": "^6.5.4",
+    "nodemon": "^2.0.19"
   }
 }
